# testy_gitlab_plugin

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
patches/: testy-frontend-run-autotests.patch
testy_gitlab_runner/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
testy_gitlab_runner/migrations/: 0001_initial.py  0002_pipelinerun_targets.py  0003_historyretentionpolicy.py  0004_pipelinerun_kind.py  0005_pipelinerun_plan_nullable.py  0006_pipelinerun_notify_fields.py  0007_autotest_run_finished_setting.py
testy_gitlab_runner/services/: cleanup.py  gitlab_client.py  notifications.py  runner.py  targets.py
testy_gitlab_runner/templates/testy_gitlab_runner/: _subnav.html  base.html  config.html  runs.html  tokens.html
