[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "testy_gitlab_runner.__version__" }

[project]
name = "testy-gitlab-plugin"
dynamic = ["version"]
description = "Run Python autotests from TestY via GitLab CI/CD."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Igor Safronov" }]
keywords = ["testy", "tms", "gitlab", "ci", "pytest", "test-management", "autotests"]
dependencies = [
    "requests>=2.28",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["django>=4.2"]

[project.urls]
Homepage = "https://github.com/TheGreatPepix/testy_gitlab_plugin"
Repository = "https://github.com/TheGreatPepix/testy_gitlab_plugin"

[project.entry-points.testy]
testy-gitlab-plugin = "testy_gitlab_runner"

[tool.setuptools.packages.find]
include = ["testy_gitlab_runner*"]

[tool.setuptools.package-data]
testy_gitlab_runner = ["templates/**/*.html"]
